testsuite/tests/ghc-regress/parser/should_fail/read030.hs
{-# LANGUAGE ExtensibleRecords, RestrictedTypeSynonyms, HereDocuments, UnsafeOverlappingInstances, NamedFieldPuns #-}
